# ai-bookkeeper

./: .env.development  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: application.md  architecture.md  extraction-prompt.md  project-plan.md  test-plan.md  user-stories.md  ux-design.md
src/backend/: __init__.py  main.py
src/backend/adapters/ai/: __init__.py  gemini_adapter.py
src/backend/adapters/api/: __init__.py  exceptions.py
src/backend/adapters/email/: __init__.py  outlook_graph_client.py  outlook_oauth.py
src/backend/adapters/persistence/: __init__.py  database.py
src/backend/adapters/security/: __init__.py  outlook_token_vault.py
src/backend/application/: __init__.py
src/backend/application/dtos/: __init__.py  booking_dtos.py  config_dtos.py  document_dtos.py  invoice_dtos.py  report_dtos.py
src/backend/application/use_cases/: __init__.py  configure_agent.py  configure_company.py  configure_settings.py  confirm_invoice.py  edit_booking.py  export_booking.py  export_diagnostics.py  fetch_emails.py  generate_commission_report.py  generate_excel_report.py  list_bookings.py  list_documents.py  list_invoices.py  mark_booking_complete.py  (+2 more)
src/backend/config/: dependencies.py  logging.py  settings.py
src/backend/domain/: enums.py
src/backend/ports/: __init__.py
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/src/: App.vue  main.ts
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_health.py
tests/adapters/ai/: test_gemini_adapter.py
tests/adapters/api/: conftest.py  test_bookings_api.py  test_config_api.py  test_documents_api.py  test_invoices_api.py  test_outlook_oauth_api.py  test_reports_api.py
tests/adapters/persistence/: conftest.py  test_config_repositories.py  test_document_repository.py  test_party_repositories.py
tests/application/: test_confirm_invoice.py  test_export_diagnostics.py  test_fetch_emails.py  test_process_invoice.py
tests/config/: test_logging.py
tests/domain/entities/: test_booking.py  test_entities.py
tests/domain/events/: test_events.py
tests/domain/services/: test_services.py
tests/domain/value_objects/: test_money.py  test_value_objects.py
(+70 files in other folders)
